The compositor in an another scene is tiggered when geometry modifications are done in the main scene. #114648

Closed
opened 2023-11-09 00:20:20 +01:00 by kursad k · 2 comments
Member

System Information
Operating system: Win 11
Graphics card: RTX 207

Blender Version
Broken: 869372ffc3

Short description of error

Making modifications in one scene triggers updates in the compositor of another scene, if the view layer is added as a node. In theory the compositor should be calculated or triggered only after a real rendering or in the actual compositor, that does not seem to be case here. Please see the video where I stacked two scenes on top of each other by utilizing having both scenes open via opening the other scene in another main window.

The compositor should not be triggered given the realtime GPU is not enabled either in the viewports. This triggering seems to happen with the tiled and the fullframe compositors. This issue becomes a real performans killer in actual heavier production scenes. The only solution I found is to disable all the compositors everywhere in all scenes.

Exact steps for others to reproduce the error
load the attached scene

make sure you can see both of the scene (scene and comp) updates

play with the merge distance value in the geometry nodes graph

watch the updates in the other

**System Information** Operating system: Win 11 Graphics card: RTX 207 **Blender Version** Broken: 869372ffc335 **Short description of error** Making modifications in one scene triggers updates in the compositor of another scene, if the view layer is added as a node. In theory the compositor should be calculated or triggered only after a real rendering or in the actual compositor, that does not seem to be case here. Please see the video where I stacked two scenes on top of each other by utilizing having both scenes open via opening the other scene in another main window. The compositor should not be triggered given the realtime GPU is not enabled either in the viewports. This triggering seems to happen with the tiled and the fullframe compositors. This issue becomes a real performans killer in actual heavier production scenes. The only solution I found is to disable all the compositors everywhere in all scenes. <video src="/attachments/c96c8e0d-838b-4e1a-be18-36ba994abe73" title="blender_DEHCz5w2PK.mp4" controls></video> **Exact steps for others to reproduce the error** load the attached scene make sure you can see both of the scene (scene and comp) updates play with the merge distance value in the geometry nodes graph watch the updates in the other
kursad k added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-11-09 00:20:21 +01:00
kursad k changed title from The compositor in an another scene is tiggered when modificationsa are done in the main scene to The compositor in an another scene is tiggered when geometry modifications are done in the main scene. 2023-11-09 00:23:55 +01:00
Member

Thanks for the report. I can confirm

Thanks for the report. I can confirm
Member

#113653 is related
There is a notifier for scene changes which triggers compositor updates, please check above report as well

#113653 is related There is a notifier for scene changes which triggers compositor updates, please check above report as well
Omar Emara self-assigned this 2023-11-16 07:56:42 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-17 08:53:02 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114648
No description provided.